--- a/example_theme/package.json
+++ b/example_theme/package.json
@@ -19,7 +19,18 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
-    "vinyl-source-stream": "^2.0.0"
+    "http-proxy": "^1.18.1",
+    "vinyl-source-stream": "^2.0.0",
+    "yargs-parser": "^13.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "npm-force-resolutions": "0.0.3"
+  },
+  "resolutions": {
+    "http-proxy": "^1.18.1",
+    "yargs-parser": "^13.1.2"
+  },
+  "scripts": {
+    "preinstall": "npx npm-force-resolutions"
+  }
 }
